tests/inputs/passing/passing.bib
@string{cvpr = {Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}}
@string{ijrr = {Intl. Journal of Robotics Research (IJRR)}}
@string{arxiv = {arXiv preprint}}
@string{ral = {IEEE Robotics and Autonmation Letters (RA-L)}}

@inproceedings{wang2023cvpr,
  author    = {R. Wang and A. Test},
  title     = {{Producing a valid BibTeX entry is not that hard: A study}},
  booktitle = cvpr,
  year      = 2023,
  url       = {https://openaccess.thecvf.com/content/CVPR2023/papers/Ci_GFPose_Learning_3D_Human_Pose_Prior_With_Gradient_Fields_CVPR_2023_paper.pdf}
}

@article{test2016ijrr,
  author  = {Adrian Test and Richard Wang},
  title   = {{BibTeX: A valid test case}},
  journal = ijrr,
  volume  = {5},
  number  = {2},
  pages   = {453--630},
  url     = {https://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/weyler2023ral.pdf},
  year    = {2016}
}


@article{test2016ijrr-bavt,
  author  = {Adrian Test and Richard Wang},
  title   = {{BibTeX: A valid test case}},
  journal = ijrr,
  volume  = {5},
  number  = {2},
  pages   = {453},
  url     = {https://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/weyler2023ral.pdf},
  year    = {2016}
}


@article{test-name2016ijrr-bavt,
  author  = {Adrian Test and Richard Wang},
  title   = {{BibTeX: A valid test case}},
  journal = ijrr,
  volume  = {5},
  number  = {2},
  pages   = {453},
  url     = {https://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/weyler2023ral.pdf},
  year    = {2016}
}

@article{wang2023arxiv,
  author  = {R. Wang and A. Test},
  title   = {{Producing a valid BibTeX entry is not that hard: A study}},
  journal = arxiv,
  volume  = {arXiv:2306.00453},
  year    = 2023,
  url     = {https://openaccess.thecvf.com/content/CVPR2023/papers/Ci_GFPose_Learning_3D_Human_Pose_Prior_With_Gradient_Fields_CVPR_2023_paper.pdf}
}