tests/inputs/errors/E002_5.bib
@string{cvpr = {Proc. of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)}}
@string{ijrr = {Intl. Journal of Robotics Research (IJRR)}}

@article{test2016ijrr,
  author  = {Adrian Test and Richard Wang},
  title   = {{BibTeX: A valid test case}},
  journal = ijrr,
  volume  = {23},
  pages   = {123--130},
  url     = {https://www.ipb.uni-bonn.de/wp-content/papercite-data/pdf/weyler2023ral.pdf},
  year    = {2016}
}